@@ -1,3 +1,7 @@
+=== master
+
+* Update count and assertions for all configured statistics reporters, not just the first (akimd) (#10)
+
 === 1.3.0 (2022-07-05)
 
 * Bump minimum minitest version to 5.15.0 (jeremyevans)
